--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,13 @@
     "fix": "prettier --write . && eslint --fix --ext .js ."
   },
   "dependencies": {
+    "argon2": "^0.30.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql2": "^3.0.1"
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.0.1",
+    "regex": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^8.32.0",
@@ -18,7 +21,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.22",
     "prettier": "2.8.3"
   }
 }
